--- a/contracts/package.json
+++ b/contracts/package.json
@@ -15,7 +15,8 @@
     "setup": "yarn compile",
     "prepublishOnly": "yarn compile && ./scripts/prepublish_generate_abi_folder",
     "publish-beta": "yarn publish --tag beta",
-    "publish-prod": "yarn tag add @chainlink/contracts@0.4.2 latest"
+    "publish-prod": "yarn tag add @chainlink/contracts@0.4.2 latest",
+    "lint:sol": "solhint --config .solhint.json \"src/v0.8/*.sol\""
   },
   "files": [
     "src/",
