--- a/core/chains/evm/config/v2/defaults/Arbitrum_Goerli.toml
+++ b/core/chains/evm/config/v2/defaults/Arbitrum_Goerli.toml
@@ -3,11 +3,9 @@ ChainType = 'arbitrum'
 OCR.ContractConfirmations = 1
 
 [GasEstimator]
-Mode = 'FixedPrice'
-# Arbitrum uses something like a Vickrey auction model where gas price represents a "max bid". In practice we usually pay much less
-PriceDefault = '1000 gwei'
-PriceMax = '1000 gwei' # Fix the gas price
-PriceMin = '1000 gwei' # Fix the gas price
+Mode = 'Arbitrum'
+# Arbitrum uses the suggested gas price, so we don't want to place any limits on the minimum
+PriceMin = '0'
 # Disable gas bumping on arbitrum
 BumpThreshold = 0
 
