--- a/core/chains/evm/config/v2/defaults/Arbitrum_Mainnet.toml
+++ b/core/chains/evm/config/v2/defaults/Arbitrum_Mainnet.toml
@@ -5,11 +5,9 @@ LinkContractAddress = "0xf97f4df75117a78c1A5a0DBb814Af92458539FB4"
 OCR.ContractConfirmations = 1
 
 [GasEstimator]
-Mode = 'FixedPrice'
-# Arbitrum uses something like a Vickrey auction model where gas price represents a "max bid". In practice we usually pay much less
-PriceDefault = '1000 gwei'
-PriceMax = '1000 gwei' # Fix the gas price
-PriceMin = '1000 gwei' # Fix the gas price
+Mode = 'Arbitrum'
+# Arbitrum uses the suggested gas price, so we don't want to place any limits on the minimum
+PriceMin = '0'
 # Disable gas bumping on arbitrum
 BumpThreshold = 0
 
