--- a/.github/workflows/ci-core.yml
+++ b/.github/workflows/ci-core.yml
@@ -11,7 +11,7 @@ jobs:
       fail-fast: false
       matrix:
         cmd: ["go_core_tests", "go_core_race_tests"]
-    name: Core Tests ${{ matrix.cmd }}
+    name: Core Tests (${{ matrix.cmd }})
     runs-on: ubuntu-latest
     env:
       DATABASE_URL: postgresql://postgres:postgres@localhost:5432/chainlink_test?sslmode=disable
@@ -39,7 +39,7 @@ jobs:
         with:
           basic-auth: ${{ secrets.GRAFANA_CLOUD_BASIC_AUTH }}
           hostname: ${{ secrets.GRAFANA_CLOUD_HOST }}
-          this-job-name: Core Tests ${{ matrix.cmd }}
+          this-job-name: Core Tests (${{ matrix.cmd }})
         continue-on-error: true
       - name: Checkout the repo
         uses: actions/checkout@v2
