--- a/core/chains/evm/config/v2/defaults/Arbitrum_Rinkeby.toml
+++ b/core/chains/evm/config/v2/defaults/Arbitrum_Rinkeby.toml
@@ -4,15 +4,18 @@ LinkContractAddress = "0x615fBe6372676474d9e6933d310469c9b68e9726"
 OCR.ContractConfirmations = 1
 
 [GasEstimator]
-BumpThreshold = 0
-Mode = 'FixedPrice'
-PriceDefault = '1000 gwei'
+Mode = 'Arbitrum'
+LimitMax = 1_000_000_000
+# Arbitrum uses the suggested gas price, so we don't want to place any limits on the minimum
+PriceMin = '0'
+PriceDefault = '0.1 gwei'
 PriceMax = '1000 gwei'
-PriceMin = '1000 gwei'
-LimitDefault = 7_000_000
-LimitTransfer = 800_000
+FeeCapDefault = '1000 gwei'
+# Disable gas bumping on arbitrum
+BumpThreshold = 0
 
 [GasEstimator.BlockHistory]
+# Force an error if someone set GAS_UPDATER_ENABLED=true by accident; we never want to run the block history estimator on arbitrum
 BlockHistorySize = 0
 
 [HeadTracker]
