--- a/core/services/chainlink/testdata/dump/evm-overrides.toml
+++ b/core/services/chainlink/testdata/dump/evm-overrides.toml
@@ -28,7 +28,8 @@ Enabled = true
 Mode = 'FixedPrice'
 PriceDefault = '100.2 kwei'
 PriceMax = '9 mwei'
-LimitDefault = 1020304050
+LimitDefault = 102030405
+LimitMax = 1020304050
 LimitMultiplier = '1.003'
 LimitTransfer = 4294967295
 LimitOCRJobType = 9901
@@ -107,7 +108,8 @@ Enabled = true
 [EVM.GasEstimator]
 Mode = 'FixedPrice'
 PriceDefault = '100.2 kwei'
-LimitDefault = 1020304050
+LimitDefault = 102030405
+LimitMax = 1020304050
 LimitMultiplier = '1.003'
 LimitTransfer = 4294967295
 LimitOCRJobType = 9901
@@ -170,7 +172,8 @@ Enabled = true
 [EVM.GasEstimator]
 Mode = 'FixedPrice'
 PriceDefault = '100.2 kwei'
-LimitDefault = 1020304050
+LimitDefault = 102030405
+LimitMax = 1020304050
 LimitMultiplier = '1.003'
 LimitTransfer = 4294967295
 LimitOCRJobType = 9901
@@ -235,7 +238,8 @@ Enabled = true
 [EVM.GasEstimator]
 Mode = 'FixedPrice'
 PriceDefault = '100.2 kwei'
-LimitDefault = 1020304050
+LimitDefault = 102030405
+LimitMax = 1020304050
 LimitMultiplier = '1.003'
 LimitTransfer = 4294967295
 LimitOCRJobType = 9901
