--- a/core/services/chainlink/testdata/config-multi-chain-effective.toml
+++ b/core/services/chainlink/testdata/config-multi-chain-effective.toml
@@ -54,6 +54,7 @@ PriceDefault = '20 gwei'
 PriceMax = '100 micro'
 PriceMin = '1 gwei'
 LimitDefault = 500000
+LimitMax = 500000
 LimitMultiplier = '1'
 LimitTransfer = 21000
 BumpMin = '5 gwei'
@@ -126,6 +127,7 @@ PriceDefault = '9.223372036854775807 ether'
 PriceMax = '100 micro'
 PriceMin = '1 gwei'
 LimitDefault = 500000
+LimitMax = 500000
 LimitMultiplier = '1'
 LimitTransfer = 21000
 BumpMin = '5 gwei'
@@ -192,6 +194,7 @@ PriceDefault = '30 gwei'
 PriceMax = '200 micro'
 PriceMin = '30 gwei'
 LimitDefault = 500000
+LimitMax = 500000
 LimitMultiplier = '1'
 LimitTransfer = 21000
 BumpMin = '20 gwei'
