core/services/chainlink: add starknet to toml config

--- a/core/services/chainlink/testdata/config-multi-chain-effective.toml
+++ b/core/services/chainlink/testdata/config-multi-chain-effective.toml
@@ -249,6 +249,14 @@ OCR2CachePollPeriod = '1m0s'
 Name = 'primary'
 URL = 'http://testnet.solana.com'
 
+[[Starknet]]
+ChainID = 'foobar'
+TxSendFrequency = '1h0m0s'
+
+[[Starknet.Nodes]]
+Name = 'primary'
+URL = 'http://stark.node'
+
 [[Terra]]
 ChainID = 'Columbus-5'
 MaxMsgsPerBatch = 13
