--- a/core/services/chainlink/testdata/config-invalid.toml
+++ b/core/services/chainlink/testdata/config-invalid.toml
@@ -35,6 +35,16 @@ Name = 'bar'
 [[Solana.Nodes]]
 Name = 'bar'
 
+[[Starknet]]
+
+[[Starknet.Nodes]]
+Name = 'primary'
+URL = 'http://stark.node'
+
+[[Starknet.Nodes]]
+Name = 'primary'
+URL = 'http://second.stark.node'
+
 [[Terra]]
 ChainID = 'Bombay-12'
 
