--- a/core/services/chainlink/testdata/dump/full-custom.toml
+++ b/core/services/chainlink/testdata/dump/full-custom.toml
@@ -281,6 +281,19 @@ URL = 'http://foo.bar'
 Name = 'mainnet-2'
 URL = 'http://fake.url'
 
+[[Starknet]]
+ChainID = 'foobar'
+OCR2CachePollPeriod = '6h0m0s'
+OCR2CacheTTL = '3m0s'
+RequestTimeout = '1m3s'
+TxTimeout = '13s'
+TxSendFrequency = '42s'
+TxMaxBatchSize = 17
+
+[[Starknet.Nodes]]
+Name = 'primary'
+URL = 'http://stark.node'
+
 [[Terra]]
 ChainID = 'Columbus-5'
 BlockRate = '10m6s'
