--- a/core/services/chainlink/testdata/dump/empty-strings.env
+++ b/core/services/chainlink/testdata/dump/empty-strings.env
@@ -215,6 +215,7 @@ KEEPER_BASE_FEE_BUFFER_PERCENT=
 KEEPER_MAXIMUM_GRACE_PERIOD=
 KEEPER_REGISTRY_CHECK_GAS_OVERHEAD=
 KEEPER_REGISTRY_PERFORM_GAS_OVERHEAD=
+KEEPER_REGISTRY_MAX_PERFORM_DATA_SIZE=
 KEEPER_REGISTRY_SYNC_INTERVAL=
 KEEPER_REGISTRY_SYNC_UPKEEP_QUEUE_SIZE=
 KEEPER_TURN_LOOK_BACK=
