--- a/core/services/chainlink/testdata/dump/full-custom.env
+++ b/core/services/chainlink/testdata/dump/full-custom.env
@@ -211,6 +211,7 @@ KEEPER_BASE_FEE_BUFFER_PERCENT=7
 KEEPER_MAXIMUM_GRACE_PERIOD=42
 KEEPER_REGISTRY_CHECK_GAS_OVERHEAD=6
 KEEPER_REGISTRY_PERFORM_GAS_OVERHEAD=900
+KEEPER_REGISTRY_MAX_PERFORM_DATA_SIZE=5000
 KEEPER_REGISTRY_SYNC_INTERVAL=1m
 KEEPER_REGISTRY_SYNC_UPKEEP_QUEUE_SIZE=99
 KEEPER_TURN_LOOK_BACK=67
