--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -141,96 +141,6 @@ jobs:
           QA_AWS_REGION: ${{ secrets.QA_AWS_REGION }}
           QA_AWS_ACCOUNT_NUMBER: ${{ secrets.QA_AWS_ACCOUNT_NUMBER }}
 
-  # eth-smoke-tests-matrix:
-  #   environment: integration
-  #   permissions:
-  #     checks: write
-  #     pull-requests: write
-  #     id-token: write
-  #     contents: read
-  #   needs: [build-chainlink, changes, build-test-image]
-  #   env:
-  #     SELECTED_NETWORKS: SIMULATED,SIMULATED_1,SIMULATED_2
-  #     CHAINLINK_COMMIT_SHA: ${{ github.sha }}
-  #     CHAINLINK_ENV_USER: ${{ github.actor }}
-  #     TEST_LOG_LEVEL: debug
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       product:
-  #         - name: automation
-  #           nodes: 19
-  #           os: ubuntu-latest
-  #           pyroscope_env: ci-smoke-automation-evm-simulated
-  #         # temporarily disabled
-  #         # - name: ocr2vrf
-  #         #   nodes: 2
-  #         #   os: ubuntu-latest
-  #         #   pyroscope_env: ci-smoke-ocr2vrf-evm-simulated
-  #   runs-on: ${{ matrix.product.os }}
-  #   name: ETH Smoke Tests ${{ matrix.product.name }}
-  #   steps:
-  #     - name: Checkout the repo
-  #       uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3.6.0
-  #       with:
-  #         ref: ${{ github.event.pull_request.head.sha || github.event.merge_group.head_sha }}
-  #     ## Run this step when changes that require tests to be run are made
-  #     - name: Run Tests
-  #       if: needs.changes.outputs.src == 'true'
-  #       uses: smartcontractkit/chainlink-github-actions/chainlink-testing-framework/run-tests@00c6214deb10a3f374c6d3430c32c5202015d463 # v2.2.12
-  #       env:
-  #         TESTCONTAINERS_RYUK_DISABLED: true
-  #         PYROSCOPE_SERVER: ${{ matrix.product.pyroscope_env == '' && '' || !startsWith(github.ref, 'refs/tags/') && '' || secrets.QA_PYROSCOPE_INSTANCE }} # Avoid sending blank envs https://github.com/orgs/community/discussions/25725
-  #         PYROSCOPE_ENVIRONMENT: ${{ matrix.product.pyroscope_env }}
-  #         PYROSCOPE_KEY: ${{ secrets.QA_PYROSCOPE_KEY }}
-  #       with:
-  #         test_command_to_run: make test_need_operator_assets && cd ./integration-tests && go test -timeout 30m -count=1 -json -test.parallel=${{ matrix.product.nodes }} ./smoke/${{ matrix.product.name }}_test.go 2>&1 | tee /tmp/gotest.log | gotestfmt
-  #         test_download_vendor_packages_command: cd ./integration-tests && go mod download
-  #         cl_repo: ${{ env.CHAINLINK_IMAGE }}
-  #         cl_image_tag: ${{ github.sha }}
-  #         aws_registries: ${{ secrets.QA_AWS_ACCOUNT_NUMBER }}
-  #         artifacts_location: ./integration-tests/smoke/logs
-  #         publish_check_name: EVM Smoke Test Results ${{ matrix.product.name }}
-  #         token: ${{ secrets.GITHUB_TOKEN }}
-  #         go_mod_path: ./integration-tests/go.mod
-  #         cache_key_id: core-e2e-${{ env.MOD_CACHE_VERSION }}
-  #         cache_restore_only: 'true'
-  #         QA_AWS_REGION: ${{ secrets.QA_AWS_REGION }}
-  #         QA_AWS_ROLE_TO_ASSUME: ${{ secrets.QA_AWS_ROLE_TO_ASSUME }}
-  #         QA_KUBECONFIG: ${{ secrets.QA_KUBECONFIG }}
-
-  #     ## Run this step when changes that do not need the test to run are made
-  #     - name: Run Setup
-  #       if: needs.changes.outputs.src == 'false'
-  #       uses: smartcontractkit/chainlink-github-actions/chainlink-testing-framework/setup-run-tests-environment@00c6214deb10a3f374c6d3430c32c5202015d463 # v2.2.12
-  #       with:
-  #         test_download_vendor_packages_command: cd ./integration-tests && go mod download
-  #         go_mod_path: ./integration-tests/go.mod
-  #         cache_key_id: core-e2e-${{ env.MOD_CACHE_VERSION }}
-  #         cache_restore_only: 'true'
-  #         QA_AWS_REGION: ${{ secrets.QA_AWS_REGION }}
-  #         QA_AWS_ROLE_TO_ASSUME: ${{ secrets.QA_AWS_ROLE_TO_ASSUME }}
-  #         QA_KUBECONFIG: ${{ secrets.QA_KUBECONFIG }}
-
-  #     - name: Upload test log
-  #       uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce # v3.1.2
-  #       if: failure()
-  #       with:
-  #         name: test-log-${{ matrix.product.name }}
-  #         path: /tmp/gotest.log
-  #         retention-days: 7
-  #       continue-on-error: true
-  #     - name: Collect Metrics
-  #       if: always()
-  #       id: collect-gha-metrics
-  #       uses: smartcontractkit/push-gha-metrics-action@d2c2b7bdc9012651230b2608a1bcb0c48538b6ec
-  #       with:
-  #         basic-auth: ${{ secrets.GRAFANA_CLOUD_BASIC_AUTH }}
-  #         hostname: ${{ secrets.GRAFANA_CLOUD_HOST }}
-  #         this-job-name: ETH Smoke Tests ${{ matrix.product.name }}
-  #         test-results-file: '{"testType":"go","filePath":"/tmp/gotest.log"}'
-  #        continue-on-error: true
-
   eth-smoke-tests-matrix-docker:
     environment: integration
     permissions:
@@ -288,37 +198,122 @@ jobs:
             nodes: 1
             os: ubuntu20.04-8cores-32GB
             pyroscope_env: ci-smoke-forwarder-ocr-evm-simulated
+
           # Automation tests split out to use minimal environments
           - name: automation-1
             nodes: 1
-            os: ubuntu20.04-64cores-256GB
+            os: ubuntu20.04-4cores-16GB
             pyroscope_env: ci-smoke-automation-evm-simulated
             file: automation
-            run: -run '^(TestAutomationBasic|TestAutomationAddFunds)$'
+            run: -run '^(TestAutomationBasic/registry_2_0)$'
           - name: automation-2
             nodes: 1
-            os: ubuntu20.04-64cores-256GB
+            os: ubuntu20.04-4cores-16GB
             pyroscope_env: ci-smoke-automation-evm-simulated
             file: automation
-            run: -run '^(TestAutomationPauseUnPause|TestAutomationRegisterUpkeep)$'
+            run: -run '^(TestAutomationBasic/registry_2_1_conditional)$'
           - name: automation-3
             nodes: 1
-            os: ubuntu20.04-64cores-256GB
+            os: ubuntu20.04-4cores-16GB
             pyroscope_env: ci-smoke-automation-evm-simulated
             file: automation
-            run: -run '^(TestAutomationPauseRegistry|TestAutomationKeeperNodesDown)$'
+            run: -run '^(TestAutomationBasic/registry_2_1_logtrigger)$'
           - name: automation-4
             nodes: 1
-            os: ubuntu20.04-64cores-256GB
+            os: ubuntu20.04-4cores-16GB
             pyroscope_env: ci-smoke-automation-evm-simulated
             file: automation
-            run: -run '^(TestAutomationPerformSimulation|TestAutomationCheckPerformGasLimit)$'
+            run: -run '^(TestAutomationAddFunds/registry_2_0)$'
           - name: automation-5
             nodes: 1
-            os: ubuntu20.04-64cores-256GB
+            os: ubuntu20.04-4cores-16GB
             pyroscope_env: ci-smoke-automation-evm-simulated
             file: automation
-            run: -run '^(TestUpdateCheckData)$'
+            run: -run '^(TestAutomationAddFunds/registry_2_1)$'
+          - name: automation-6
+            nodes: 1
+            os: ubuntu20.04-4cores-16GB
+            pyroscope_env: ci-smoke-automation-evm-simulated
+            file: automation
+            run: -run '^(TestAutomationPauseUnPause/registry_2_0)$'
+          - name: automation-7
+            nodes: 1
+            os: ubuntu20.04-4cores-16GB
+            pyroscope_env: ci-smoke-automation-evm-simulated
+            file: automation
+            run: -run '^(TestAutomationPauseUnPause/registry_2_1)$'
+          - name: automation-8
+            nodes: 1
+            os: ubuntu20.04-4cores-16GB
+            pyroscope_env: ci-smoke-automation-evm-simulated
+            file: automation
+            run: -run '^(TestAutomationRegisterUpkeep/registry_2_0)$'
+          - name: automation-9
+            nodes: 1
+            os: ubuntu20.04-4cores-16GB
+            pyroscope_env: ci-smoke-automation-evm-simulated
+            file: automation
+            run: -run '^(TestAutomationRegisterUpkeep/registry_2_1)$'
+          - name: automation-10
+            nodes: 1
+            os: ubuntu20.04-4cores-16GB
+            pyroscope_env: ci-smoke-automation-evm-simulated
+            file: automation
+            run: -run '^(TestAutomationPauseRegistry/registry_2_0)$'
+          - name: automation-11
+            nodes: 1
+            os: ubuntu20.04-4cores-16GB
+            pyroscope_env: ci-smoke-automation-evm-simulated
+            file: automation
+            run: -run '^(TestAutomationPauseRegistry/registry_2_1)$'
+          - name: automation-12
+            nodes: 1
+            os: ubuntu20.04-4cores-16GB
+            pyroscope_env: ci-smoke-automation-evm-simulated
+            file: automation
+            run: -run '^(TestAutomationKeeperNodesDown/registry_2_0)$'
+          - name: automation-13
+            nodes: 1
+            os: ubuntu20.04-4cores-16GB
+            pyroscope_env: ci-smoke-automation-evm-simulated
+            file: automation
+            run: -run '^(TestAutomationKeeperNodesDown/registry_2_1)$'
+          - name: automation-14
+            nodes: 1
+            os: ubuntu20.04-4cores-16GB
+            pyroscope_env: ci-smoke-automation-evm-simulated
+            file: automation
+            run: -run '^(TestAutomationPerformSimulation/registry_2_0)$'
+          - name: automation-15
+            nodes: 1
+            os: ubuntu20.04-4cores-16GB
+            pyroscope_env: ci-smoke-automation-evm-simulated
+            file: automation
+            run: -run '^(TestAutomationPerformSimulation/registry_2_1)$'
+          - name: automation-16
+            nodes: 1
+            os: ubuntu20.04-4cores-16GB
+            pyroscope_env: ci-smoke-automation-evm-simulated
+            file: automation
+            run: -run '^(TestAutomationCheckPerformGasLimit/registry_2_0)$'
+          - name: automation-17
+            nodes: 1
+            os: ubuntu20.04-4cores-16GB
+            pyroscope_env: ci-smoke-automation-evm-simulated
+            file: automation
+            run: -run '^(TestAutomationCheckPerformGasLimit/registry_2_1)$'
+          - name: automation-18
+            nodes: 1
+            os: ubuntu20.04-4cores-16GB
+            pyroscope_env: ci-smoke-automation-evm-simulated
+            file: automation
+            run: -run '^(TestUpdateCheckData/registry_2_0)$'
+          - name: automation-19
+            nodes: 1
+            os: ubuntu20.04-4cores-16GB
+            pyroscope_env: ci-smoke-automation-evm-simulated
+            file: automation
+            run: -run '^(TestUpdateCheckData/registry_2_1)$'
 
           # Keeper tests split out to use minimal environments
           - name: keeper-1
