--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -141,6 +141,84 @@ jobs:
           QA_AWS_REGION: ${{ secrets.QA_AWS_REGION }}
           QA_AWS_ACCOUNT_NUMBER: ${{ secrets.QA_AWS_ACCOUNT_NUMBER }}
 
+  compare-tests:
+    needs: [changes]
+    runs-on: ubuntu-latest
+    name: Compare/Build Automation Test List
+    outputs:
+      matrix: ${{ env.MATRIX_JSON }}
+    steps:
+      - name: Checkout the repo
+        uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3.6.0
+      - name: Compare Test Lists
+        run: |
+          cd ./integration-tests
+          ./scripts/compareTestList.sh ./smoke/automation_test.go
+          ./scripts/compareTestList.sh ./smoke/keeper_test.go
+      - name: Build Test Matrix Lists
+        id: build-test-matrix-list
+        run: |
+          cd ./integration-tests
+          MATRIX_JSON_AUTOMATION=$(./scripts/buildTestMatrixList.sh ./smoke/automation_test.go automation ubuntu20.04-4cores-16GB)
+          MATRIX_JSON_KEEPER=$(./scripts/buildTestMatrixList.sh ./smoke/keeper_test.go keeper ubuntu20.04-8cores-32GB)
+          COMBINED_ARRAY=$(jq -c -n "$MATRIX_JSON_AUTOMATION + $MATRIX_JSON_KEEPER")
+          echo "MATRIX_JSON=${COMBINED_ARRAY}" >> $GITHUB_ENV
+  eth-smoke-tests-matrix-automation:
+    environment: integration
+    permissions:
+      checks: write
+      pull-requests: write
+      id-token: write
+      contents: read
+    needs: [build-chainlink, changes, compare-tests]
+    env:
+      SELECTED_NETWORKS: SIMULATED,SIMULATED_1,SIMULATED_2
+      CHAINLINK_COMMIT_SHA: ${{ github.sha }}
+      CHAINLINK_ENV_USER: ${{ github.actor }}
+      TEST_LOG_LEVEL: debug
+    strategy:
+      fail-fast: false
+      matrix:
+        product: ${{fromJson(needs.compare-tests.outputs.matrix)}}
+    runs-on: ${{ matrix.product.os }}
+    name: ${{ matrix.product.name }}
+    steps:
+      - name: Checkout the repo
+        uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3.6.0
+        with:
+          ref: ${{ github.event.pull_request.head.sha || github.event.merge_group.head_sha }}
+      - name: Build Go Test Command
+        id: build-go-test-command
+        run: |
+          # if the matrix.product.run is set, use it for a different command
+          if [ "${{ matrix.product.run }}" != "" ]; then
+            echo "run_command=${{ matrix.product.run }} ./smoke/${{ matrix.product.file }}_test.go" >> "$GITHUB_OUTPUT"
+          else
+            echo "run_command=./smoke/${{ matrix.product.name }}_test.go" >> "$GITHUB_OUTPUT"
+          fi
+      ## Run this step when changes that require tests to be run are made
+      - name: Run Tests
+        if: needs.changes.outputs.src == 'true'
+        uses: smartcontractkit/chainlink-github-actions/chainlink-testing-framework/run-tests@00c6214deb10a3f374c6d3430c32c5202015d463 # v2.2.12
+        env:
+          PYROSCOPE_SERVER: ${{ matrix.product.pyroscope_env == '' && '' || !startsWith(github.ref, 'refs/tags/') && '' || secrets.QA_PYROSCOPE_INSTANCE }} # Avoid sending blank envs https://github.com/orgs/community/discussions/25725
+          PYROSCOPE_ENVIRONMENT: ${{ matrix.product.pyroscope_env }}
+          PYROSCOPE_KEY: ${{ secrets.QA_PYROSCOPE_KEY }}
+        with:
+          test_command_to_run: make test_need_operator_assets && cd ./integration-tests && go test -timeout 30m -count=1 -json -test.parallel=${{ matrix.product.nodes }} ${{ steps.build-go-test-command.outputs.run_command }} 2>&1 | tee /tmp/gotest.log | gotestfmt
+          test_download_vendor_packages_command: cd ./integration-tests && go mod download
+          cl_repo: ${{ env.CHAINLINK_IMAGE }}
+          cl_image_tag: ${{ github.sha }}
+          aws_registries: ${{ secrets.QA_AWS_ACCOUNT_NUMBER }}
+          artifacts_location: ./integration-tests/smoke/logs
+          publish_check_name: ${{ matrix.product.name }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+          go_mod_path: ./integration-tests/go.mod
+          cache_key_id: core-e2e-${{ env.MOD_CACHE_VERSION }}
+          cache_restore_only: 'true'
+          QA_AWS_REGION: ${{ secrets.QA_AWS_REGION }}
+          QA_AWS_ROLE_TO_ASSUME: ${{ secrets.QA_AWS_ROLE_TO_ASSUME }}
+          QA_KUBECONFIG: ${{ secrets.QA_KUBECONFIG }}
   eth-smoke-tests-matrix:
     environment: integration
     permissions:
@@ -198,214 +276,6 @@ jobs:
             nodes: 1
             os: ubuntu20.04-8cores-32GB
             pyroscope_env: ci-smoke-forwarder-ocr-evm-simulated
-
-          # Automation tests split out to use minimal environments
-          - name: automation-1
-            nodes: 1
-            os: ubuntu20.04-4cores-16GB
-            pyroscope_env: ci-smoke-automation-evm-simulated
-            file: automation
-            run: -run '^(TestAutomationBasic/registry_2_0)$'
-          - name: automation-2
-            nodes: 1
-            os: ubuntu20.04-4cores-16GB
-            pyroscope_env: ci-smoke-automation-evm-simulated
-            file: automation
-            run: -run '^(TestAutomationBasic/registry_2_1_conditional)$'
-          - name: automation-3
-            nodes: 1
-            os: ubuntu20.04-4cores-16GB
-            pyroscope_env: ci-smoke-automation-evm-simulated
-            file: automation
-            run: -run '^(TestAutomationBasic/registry_2_1_logtrigger)$'
-          - name: automation-4
-            nodes: 1
-            os: ubuntu20.04-4cores-16GB
-            pyroscope_env: ci-smoke-automation-evm-simulated
-            file: automation
-            run: -run '^(TestAutomationAddFunds/registry_2_0)$'
-          - name: automation-5
-            nodes: 1
-            os: ubuntu20.04-4cores-16GB
-            pyroscope_env: ci-smoke-automation-evm-simulated
-            file: automation
-            run: -run '^(TestAutomationAddFunds/registry_2_1)$'
-          - name: automation-6
-            nodes: 1
-            os: ubuntu20.04-4cores-16GB
-            pyroscope_env: ci-smoke-automation-evm-simulated
-            file: automation
-            run: -run '^(TestAutomationPauseUnPause/registry_2_0)$'
-          - name: automation-7
-            nodes: 1
-            os: ubuntu20.04-4cores-16GB
-            pyroscope_env: ci-smoke-automation-evm-simulated
-            file: automation
-            run: -run '^(TestAutomationPauseUnPause/registry_2_1)$'
-          - name: automation-8
-            nodes: 1
-            os: ubuntu20.04-4cores-16GB
-            pyroscope_env: ci-smoke-automation-evm-simulated
-            file: automation
-            run: -run '^(TestAutomationRegisterUpkeep/registry_2_0)$'
-          - name: automation-9
-            nodes: 1
-            os: ubuntu20.04-4cores-16GB
-            pyroscope_env: ci-smoke-automation-evm-simulated
-            file: automation
-            run: -run '^(TestAutomationRegisterUpkeep/registry_2_1)$'
-          - name: automation-10
-            nodes: 1
-            os: ubuntu20.04-4cores-16GB
-            pyroscope_env: ci-smoke-automation-evm-simulated
-            file: automation
-            run: -run '^(TestAutomationPauseRegistry/registry_2_0)$'
-          - name: automation-11
-            nodes: 1
-            os: ubuntu20.04-4cores-16GB
-            pyroscope_env: ci-smoke-automation-evm-simulated
-            file: automation
-            run: -run '^(TestAutomationPauseRegistry/registry_2_1)$'
-          - name: automation-12
-            nodes: 1
-            os: ubuntu20.04-4cores-16GB
-            pyroscope_env: ci-smoke-automation-evm-simulated
-            file: automation
-            run: -run '^(TestAutomationKeeperNodesDown/registry_2_0)$'
-          - name: automation-13
-            nodes: 1
-            os: ubuntu20.04-4cores-16GB
-            pyroscope_env: ci-smoke-automation-evm-simulated
-            file: automation
-            run: -run '^(TestAutomationKeeperNodesDown/registry_2_1)$'
-          - name: automation-14
-            nodes: 1
-            os: ubuntu20.04-4cores-16GB
-            pyroscope_env: ci-smoke-automation-evm-simulated
-            file: automation
-            run: -run '^(TestAutomationPerformSimulation/registry_2_0)$'
-          - name: automation-15
-            nodes: 1
-            os: ubuntu20.04-4cores-16GB
-            pyroscope_env: ci-smoke-automation-evm-simulated
-            file: automation
-            run: -run '^(TestAutomationPerformSimulation/registry_2_1)$'
-          - name: automation-16
-            nodes: 1
-            os: ubuntu20.04-4cores-16GB
-            pyroscope_env: ci-smoke-automation-evm-simulated
-            file: automation
-            run: -run '^(TestAutomationCheckPerformGasLimit/registry_2_0)$'
-          - name: automation-17
-            nodes: 1
-            os: ubuntu20.04-4cores-16GB
-            pyroscope_env: ci-smoke-automation-evm-simulated
-            file: automation
-            run: -run '^(TestAutomationCheckPerformGasLimit/registry_2_1)$'
-          - name: automation-18
-            nodes: 1
-            os: ubuntu20.04-4cores-16GB
-            pyroscope_env: ci-smoke-automation-evm-simulated
-            file: automation
-            run: -run '^(TestUpdateCheckData/registry_2_0)$'
-          - name: automation-19
-            nodes: 1
-            os: ubuntu20.04-4cores-16GB
-            pyroscope_env: ci-smoke-automation-evm-simulated
-            file: automation
-            run: -run '^(TestUpdateCheckData/registry_2_1)$'
-
-          # Keeper tests split out to use minimal environments
-          - name: keeper-1
-            nodes: 1
-            os: ubuntu20.04-8cores-32GB
-            pyroscope_env: ci-smoke-keeper-evm-simulated
-            file: keeper
-            run: -run ^TestKeeperBasicSmoke$
-          - name: keeper-2
-            nodes: 1
-            os: ubuntu20.04-8cores-32GB
-            pyroscope_env: ci-smoke-keeper-evm-simulated
-            file: keeper
-            run: -run ^TestKeeperBlockCountPerTurn/registry_1_1$
-          - name: keeper-3
-            nodes: 1
-            os: ubuntu20.04-8cores-32GB
-            pyroscope_env: ci-smoke-keeper-evm-simulated
-            file: keeper
-            run: -run ^TestKeeperBlockCountPerTurn/registry_1_2$
-          - name: keeper-4
-            nodes: 1
-            os: ubuntu20.04-8cores-32GB
-            pyroscope_env: ci-smoke-keeper-evm-simulated
-            file: keeper
-            run: -run ^TestKeeperBlockCountPerTurn/registry_1_3$
-          - name: keeper-5
-            nodes: 1
-            os: ubuntu20.04-8cores-32GB
-            pyroscope_env: ci-smoke-keeper-evm-simulated
-            file: keeper
-            run: -run ^TestKeeperSimulation$
-          - name: keeper-6
-            nodes: 1
-            os: ubuntu20.04-8cores-32GB
-            pyroscope_env: ci-smoke-keeper-evm-simulated
-            file: keeper
-            run: -run ^TestKeeperCheckPerformGasLimit/registry_1_2$
-          - name: keeper-7
-            nodes: 1
-            os: ubuntu20.04-8cores-32GB
-            pyroscope_env: ci-smoke-keeper-evm-simulated
-            file: keeper
-            run: -run ^TestKeeperCheckPerformGasLimit/registry_1_3$
-          - name: keeper-8
-            nodes: 1
-            os: ubuntu20.04-8cores-32GB
-            pyroscope_env: ci-smoke-keeper-evm-simulated
-            file: keeper
-            run: -run ^TestKeeperRegisterUpkeep$
-          - name: keeper-9
-            nodes: 1
-            os: ubuntu20.04-8cores-32GB
-            pyroscope_env: ci-smoke-keeper-evm-simulated
-            file: keeper
-            run: -run ^TestKeeperAddFunds$
-          - name: keeper-10
-            nodes: 1
-            os: ubuntu20.04-8cores-32GB
-            pyroscope_env: ci-smoke-keeper-evm-simulated
-            file: keeper
-            run: -run ^TestKeeperRemove$
-          - name: keeper-11
-            nodes: 1
-            os: ubuntu20.04-8cores-32GB
-            pyroscope_env: ci-smoke-keeper-evm-simulated
-            file: keeper
-            run: -run ^TestKeeperPauseRegistry$
-          - name: keeper-12
-            nodes: 1
-            os: ubuntu20.04-8cores-32GB
-            pyroscope_env: ci-smoke-keeper-evm-simulated
-            file: keeper
-            run: -run ^TestKeeperMigrateRegistry$
-          - name: keeper-13
-            nodes: 1
-            os: ubuntu20.04-8cores-32GB
-            pyroscope_env: ci-smoke-keeper-evm-simulated
-            file: keeper
-            run: -run ^TestKeeperNodeDown/registry_1_1$
-          - name: keeper-14
-            nodes: 1
-            os: ubuntu20.04-8cores-32GB
-            pyroscope_env: ci-smoke-keeper-evm-simulated
-            file: keeper
-            run: -run ^TestKeeperNodeDown/registry_1_2$
-          - name: keeper-15
-            nodes: 1
-            os: ubuntu20.04-8cores-32GB
-            pyroscope_env: ci-smoke-keeper-evm-simulated
-            file: keeper
-            run: -run ^TestKeeperNodeDown/registry_1_3$
     runs-on: ${{ matrix.product.os }}
     name: ${{ matrix.product.name }}
     steps:
@@ -482,10 +352,10 @@ jobs:
     if: always()
     runs-on: ubuntu-latest
     name: ETH Smoke Tests
-    needs: [eth-smoke-tests-matrix]
+    needs: [eth-smoke-tests-matrix, eth-smoke-tests-matrix-automation]
     steps:
       - name: Check smoke test matrix status
-        if: needs.eth-smoke-tests-matrix-docker.result != 'success'
+        if: needs.eth-smoke-tests-matrix.result != 'success' || needs.eth-smoke-tests-matrix-automation.result != 'success'
         run: exit 1
       - name: Collect Metrics
         if: always()
